--- a/game.html
+++ b/game.html
@@ -15,6 +15,38 @@
         .light {
             background: linear-gradient(45deg, #EA9F45 0%, #F4EE51 100%);
         }
+
+        button {
+            width: 80px;
+            display: inline-block;
+            margin-top: 15px;
+            margin-bottom: 10px;
+            vertical-align: middle;
+            color: rgb(255, 255, 255);
+            background-color: rgb(233, 104, 107);
+            text-align: center;
+            cursor: pointer;
+            white-space: nowrap;
+            box-shadow: rgba(0, 0, 0, 0.12) 0px 2px 6px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+            font-family: 微软雅黑;
+            border-width: initial;
+            border-style: none;
+            border-color: initial;
+            border-image: initial;
+            outline: 0px;
+            padding: 8px 18px;
+            overflow: hidden;
+            text-decoration: none;
+            transition: all 0.2s ease-out 0s;
+            border-radius: 2px;
+        }
+
+        input {
+            width: 80px;
+            height: 30px;
+            font-size: 20px;
+            text-align: center;
+        }
     </style>
 </head>
 
@@ -90,28 +122,33 @@
             <td></td>
             <td></td>
         </tr>
-
     </table>
+
+    <button onclick="run(); this.disabled=true; ">开始</button>
+    积分：<input type="number" readonly value="0">
 </body>
 <script src="/static/js/jquery-1.9.1.min.js"></script>
 <script>
     var config = {
         // 当前X轴起始位置（默认画布中心）
-        position: Math.floor($('tr:first').find('td').length/2),
+        position: Math.floor($('tr:first').find('td').length / 2),
         // 上一次X轴起始位置（默认画布中心）
         historyPosition: Math.floor($('tr:first').find('td').length / 2),
         // 掉落速度
-        time: 200,
+        time: 300,
         // 形状数组
-        shape: [['0:-1', '0:0', '0:1', '-1:0', 3], ['0:0', '-1:0', '-2:0', 1], ['0:-1', '0:0', '-1:0', 2]],
+        shape: [[[0, 0, 0, -1], [-1, 0, 1, 0], 3], [[0, -1, -2], [0, 0, 0], 1], [[0, 0, -1,], [-1, 0, 0], 2]],
+        // shape: [[[0, -1, -2], [0, 0, 0], 1]],
         // 移动定时器容器
         drop: [],
         // 停止移动
         stop: false,
         // 最右位置
-        maxPosition: 3,
+        maxPosition: 0,
         // 最左位置
-        minPosition: 1,
+        minPosition: 0,
+        // 旋转
+        whirl: 1,
     }
 
     $('td').click(function () {
@@ -133,60 +170,66 @@
                 console.log('下');
                 break;
             case 37:
-                config.position--
-                break;
+                // 向左移动
+                config.position > config.minPosition ? config.position-- : config.position;
+                  break;
             case 39:
-                config.position++
+                // 向右移动
+                config.position < config.maxPosition ? config.position++ : config.position;
                 break;
             default:
                 console.log("按键：" + event.keyCode);
         }
     });
 
-    function run(){
+    function run() {
         var x = 0;
-        let currentShape= config.shape[Math.floor(Math.random()* config.shape.length)];
+        // 随机形状
+        let currentShape = config.shape[Math.floor(Math.random() * config.shape.length)];
+        // 左移动限制 （禁止超出）
+        config.maxPosition= Math.floor($('tr:first').find('td').length / 2) + (Math.floor($('tr:first').find('td').length / 2) - Math.max.apply(Math, currentShape[1]));
+        // 右移动限制 （禁止超出）
+        config.minPosition= -Math.min.apply(Math, currentShape[1]);
+
         for (let i = 0; i < $('tr').length; i++) {
             config.drop[i] = setTimeout(() => {
-                for (let s = 0; s < currentShape.length-1; s++) {
-                    let draw = currentShape[s].split(':');
-
-                    // 向下移动
-                    if ((x + parseInt(draw[0] - 1)) >= 0) {
-                        $('tr:eq(' + (x + parseInt(draw[0] - 1)) + ')').find('td:eq(' + (config.historyPosition + parseInt(draw[1])) + ')').removeClass('light');
+                for (let s = 0; s < currentShape[0].length; s++) {
+                    // 消除上一步移动
+                    if ((x + currentShape[0][s] - 1) >= 0) {
+                        $('tr:eq(' + (x + currentShape[0][s] - 1) + ')').find('td:eq(' + (config.historyPosition + currentShape[1][s]) + ')').removeClass('light');
                     }
 
-                    // 消除上一步移动
-                    if ((x + parseInt(draw[0])) >= 0) {
-                        $('tr:eq(' + (x + parseInt(draw[0])) + ')').find('td:eq(' + (config.position + parseInt(draw[1])) + ')').addClass('light');
+                    // 向下移动
+                    if ((x + currentShape[0][s]) >= 0) {
+                        $('tr:eq(' + (x + currentShape[0][s]) + ')').find('td:eq(' + (config.position + currentShape[1][s]) + ')').addClass('light');
                     }
 
                     // 执行结束并初始化位置参数
-                    if (config.stop == true && s == (currentShape.length - 2)) {
+                    if (config.stop == true && s == (currentShape[0].length - 1)) {
                         for (let d = 0; d < config.drop.length; d++) {
                             clearTimeout(config.drop[d]);
                         }
-                        clear();
                         config.position = Math.floor($('tr:first').find('td').length / 2);
+                        clear()?run():console.log('--GAME OVER--');
+                        // 执行后关闭结束开关
                         config.stop = false;
                         return;
                     }
 
-                    // 开启结束
-                    if (s< currentShape[currentShape.length - 1] && $('tr:eq(' + (x + parseInt(draw[0] + 1)) + ')').find('td:eq(' + (config.position + parseInt(draw[1])) + ')').hasClass('light')) {
-                        config.stop=true;
+                    // 碰撞开启结束开关
+                    if (s < currentShape[2] && $('tr:eq(' + (x + currentShape[0][s] + 1) + ')').find('td:eq(' + (config.position + currentShape[1][s]) + ')').hasClass('light')) {
+                        config.stop = true;
                     }
                 }
 
                 // 触底结束并初始化位置参数
                 if (x == $('tr').length - 1) {
                     config.position = Math.floor($('tr:first').find('td').length / 2);
-                    clear();
-                    console.log('结束');
-                }
-
+                    clear()?run():console.log('--GAME OVER--');
+                } 
+                // 下一行
                 x++;
-
+                // 保存历史位置（用于清除上一步）
                 config.historyPosition = config.position;
 
             }, i * config.time);
@@ -197,12 +240,13 @@
         // 检查每一行
         for (let i = 0; i < $('tr').length; i++) {
             // 判断是否整行占满
-            if($('tr:eq(' + i + ')').find('.light').length == 5){
+            if ($('tr:eq(' + i + ')').find('.light').length == 5) {
+                $('input').val(parseInt($('input').val()) + 1);
                 // 清除当前行
                 $('tr:eq(' + i + ')').find('td').removeClass('light');
                 // 遍历每一格向下移动
-                for (let d = i-1; d >= 0; d--) {
-                    for (let t = 0; t < $('tr:eq('+ d +')').find('td').length; t++) {
+                for (let d = i - 1; d >= 0; d--) {
+                    for (let t = 0; t < $('tr:eq(' + d + ')').find('td').length; t++) {
                         // 判断是否点亮
                         if ($('tr:eq(' + d + ')').find('td:eq(' + t + ')').hasClass('light')) {
                             // 清除当前格子
@@ -218,8 +262,12 @@
         if ($('tr:first').find('.light').length) {
             setTimeout(() => {
                 alert('--GAME OVER--');
+                location.reload();
             }, 200);
+            return false;
         }
+
+        return true;
     }
 </script>
 
