--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/static/css/home.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1406557_2a996nb5ay8.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1406557_q81sc4rbm88.css">
     <title>PHP54技术博客</title>
 </head>
 
 <body>
     <header>
-<<<<<<< HEAD
         <nav>
             <span><a href="/" title="PHP54+">PHP54+</a></span>
             <span>
@@ -50,47 +49,9 @@
             <span><a href="javascript:;">javascript</a></span>
             <span><a href="javascript:;">html/css</a></span>
             <span><a href="javascript:;">关于作者</a></span>
-            <div class="search"></div>
+            <span><i class="iconfont icon-sousuo"></i></span>
+            <input type="text">
         </nav>
-=======
-        <span><a href="/" title="PHP54+">PHP54+</a></span>
-        <span>
-            <a href="javascript:;">PHPedit</a>
-            <div class="detail">
-                <ul>
-                    <li><a href="javascript:;">大家好，欢迎来到PHP54+1</a></li>
-                    <li><a href="javascript:;">大家好，欢迎来到PHP54+2</a></li>
-                    <li><a href="javascript:;">大家好，欢迎来到PHP54+13</a></li>
-                    <li><a href="javascript:;">大家好，欢迎来到PHP54+14</a></li>
-                    <li><a href="javascript:;">大家好，欢迎来到PHP54+15</a></li>
-                    <li><a href="javascript:;">大家好，欢迎来到PHP54+61</a></li>
-                    <li><a href="javascript:;">大家好，欢迎来到PHP54+71</a></li>
-                    <li><a href="javascript:;">大家好，欢迎来到PHP54+81</a></li>
-                    <li><a href="javascript:;">大家好，欢迎来到PHP54+91</a></li>
-                </ul>
-            </div>
-        </span>
-        <span>
-            <a href="javascript:;">mysql</a>
-            <div class="detail">
-                <ul>
-                    <li><a href="javascript:;">大家好，欢迎来到mysqkk+1</a></li>
-                    <li><a href="javascript:;">大家好，欢迎来到mysqkk+2</a></li>
-                    <li><a href="javascript:;">大家好，欢迎来到mysqkk+13</a></li>
-                    <li><a href="javascript:;">大家好，欢迎来到mysqkk+14</a></li>
-                    <li><a href="javascript:;">大家好，欢迎来到mysqkk+15</a></li>
-                    <li><a href="javascript:;">大家好，欢迎来到mysqkk+61</a></li>
-                    <li><a href="javascript:;">大家好，欢迎来到mysqkk+71</a></li>
-                    <li><a href="javascript:;">大家好，欢迎来到mysqkk+81</a></li>
-                    <li><a href="javascript:;">大家好，欢迎来到mysqkk+91</a></li>
-                </ul>
-            </div>
-        </span>
-        <span><a href="javascript:;">javascript</a></span>
-        <span><a href="javascript:;">html/css</a></span>
-        <span><a href="javascript:;">关于作者</a></span>
-        <div class="search"></div>
->>>>>>> e8a0e24c840943ccb8ec88fa87304b95fb491676
     </header>
 
     <div class='background'>
@@ -118,26 +79,26 @@
         </div>
         <div class="slider slide1">
             <div>
-                <h2>Css Based slider</h2>
-                <a href="javascript:;" class="button">Back</a> <a href="javascript:;" class="button">Download</a>
+                <h2>php中文网-教程_手册_视频-免费php在线学习平台</h2>
+                <a href="javascript:;" class="button">查看详情</a>
             </div>
         </div>
         <div class="slider slide2">
             <div>
-                <h2>CSS Slider without use of any javascript or jQuery</h2>
-                <a href="javascript:;" class="button">Back</a> <a href="javascript:;" class="button">Download</a>
+                <h2>让交流变得简单</h2>
+                <a href="javascript:;" class="button">查看详情</a>
             </div>
         </div>
         <div class="slider slide3">
             <div>
-                <h2>Full screen animation slider</h2>
-                <a href="javascript:;" class="button">Back</a> <a href="javascript:;" class="button">Download</a>
+                <h2>一起学习与成长</h2>
+                <a href="javascript:;" class="button">查看详情</a>
             </div>
         </div>
         <div class="slider slide4">
             <div>
-                <h2>css3 slider</h2>
-                <a href="javascript:;" class="button">Back</a> <a href="javascript:;" class="button">Download</a>
+                <h2>跪舔各位PHP大佬</h2>
+                <a href="javascript:;" class="button">查看详情</a>
             </div>
         </div>
 
@@ -152,21 +113,94 @@
     </div>
 
     <div class="contain">
-        <div class="article">
-            <h3><a href="javascript:;">php中文网-教程_手册_视频-免费php在线学习平台</a></h3>
-            <div class="general_image_pic">
-                <a href="javascript:;"><img src="https://www.php54.com/ueditor/php/upload/image/20190430/1556613833244033.jpg" alt="php中文网"></a>
-                <div class="description">我一直在学习，我也一直在忘记。PHP应该是涉及知识最广的一门语言，上至C，C++下至pythson,java等。每天使用linux服务器的时候修改root及主机名这样简单的操作，我都要花费很多时间去百度，却</div>
+        <div class="left">
+            <div class="article">
+                <h3><a href="javascript:;">php中文网-教程_手册_视频-免费php在线学习平台</a></h3>
+                <div class="general_image_pic">
+                    <a href="javascript:;"><img src="https://www.php54.com/ueditor/php/upload/image/20190430/1556613833244033.jpg" alt="php中文网"></a>
+                    <div class="description">我一直在学习，我也一直在忘记。PHP应该是涉及知识最广的一门语言，上至C，C++下至pythson,java等。每天使用linux服务器的时候修改root及主机名这样简单的操作，我都要花费很多时间去百度，却</div>
+                </div>
             </div>
+
+            <div class="article">
+                <h3><a href="javascript:;">php中文网-教程_手册_视频-免费php在线学习平台</a></h3>
+                <div class="general_image_pic">
+                    <a href="javascript:;"><img src="https://www.php54.com/ueditor/php/upload/image/20190430/1556613833244033.jpg" alt="php中文网"></a>
+                    <div class="description">我一直在学习，我也一直在忘记。PHP应该是涉及知识最广的一门语言，上至C，C++下至pythson,java等。每天使用linux服务器的时候修改root及主机名这样简单的操作，我都要花费很多时间去百度，却</div>
+                </div>
+            </div>
+
+            <div class="article">
+                <h3><a href="javascript:;">php中文网-教程_手册_视频-免费php在线学习平台</a></h3>
+                <div class="general_image_pic">
+                    <a href="javascript:;"><img src="https://www.php54.com/ueditor/php/upload/image/20190430/1556613833244033.jpg" alt="php中文网"></a>
+                    <div class="description">我一直在学习，我也一直在忘记。PHP应该是涉及知识最广的一门语言，上至C，C++下至pythson,java等。每天使用linux服务器的时候修改root及主机名这样简单的操作，我都要花费很多时间去百度，却</div>
+                </div>
+            </div>
+
+            <div class="article">
+                <h3><a href="javascript:;">php中文网-教程_手册_视频-免费php在线学习平台</a></h3>
+                <div class="general_image_pic">
+                    <a href="javascript:;"><img src="https://www.php54.com/ueditor/php/upload/image/20190430/1556613833244033.jpg" alt="php中文网"></a>
+                    <div class="description">我一直在学习，我也一直在忘记。PHP应该是涉及知识最广的一门语言，上至C，C++下至pythson,java等。每天使用linux服务器的时候修改root及主机名这样简单的操作，我都要花费很多时间去百度，却</div>
+                </div>
+            </div>
+
+            <div class="article">
+                <h3><a href="javascript:;">php中文网-教程_手册_视频-免费php在线学习平台</a></h3>
+                <div class="general_image_pic">
+                    <a href="javascript:;"><img src="https://www.php54.com/ueditor/php/upload/image/20190430/1556613833244033.jpg" alt="php中文网"></a>
+                    <div class="description">我一直在学习，我也一直在忘记。PHP应该是涉及知识最广的一门语言，上至C，C++下至pythson,java等。每天使用linux服务器的时候修改root及主机名这样简单的操作，我都要花费很多时间去百度，却</div>
+                </div>
+            </div>
+
+            <div class="article">
+                <h3><a href="javascript:;">php中文网-教程_手册_视频-免费php在线学习平台</a></h3>
+                <div class="general_image_pic">
+                    <a href="javascript:;"><img src="https://www.php54.com/ueditor/php/upload/image/20190430/1556613833244033.jpg" alt="php中文网"></a>
+                    <div class="description">我一直在学习，我也一直在忘记。PHP应该是涉及知识最广的一门语言，上至C，C++下至pythson,java等。每天使用linux服务器的时候修改root及主机名这样简单的操作，我都要花费很多时间去百度，却</div>
+                </div>
+            </div>
+
+            <div class="article">
+                <h3><a href="javascript:;">php中文网-教程_手册_视频-免费php在线学习平台</a></h3>
+                <div class="general_image_pic">
+                    <a href="javascript:;"><img src="https://www.php54.com/ueditor/php/upload/image/20190430/1556613833244033.jpg" alt="php中文网"></a>
+                    <div class="description">我一直在学习，我也一直在忘记。PHP应该是涉及知识最广的一门语言，上至C，C++下至pythson,java等。每天使用linux服务器的时候修改root及主机名这样简单的操作，我都要花费很多时间去百度，却</div>
+                </div>
+            </div>
+
+            <div class="article">
+                <h3><a href="javascript:;">php中文网-教程_手册_视频-免费php在线学习平台</a></h3>
+                <div class="general_image_pic">
+                    <a href="javascript:;"><img src="https://www.php54.com/ueditor/php/upload/image/20190430/1556613833244033.jpg" alt="php中文网"></a>
+                    <div class="description">我一直在学习，我也一直在忘记。PHP应该是涉及知识最广的一门语言，上至C，C++下至pythson,java等。每天使用linux服务器的时候修改root及主机名这样简单的操作，我都要花费很多时间去百度，却</div>
+                </div>
+            </div>
+
+            <div class="article">
+                <h3><a href="javascript:;">php中文网-教程_手册_视频-免费php在线学习平台</a></h3>
+                <div class="general_image_pic">
+                    <a href="javascript:;"><img src="https://www.php54.com/ueditor/php/upload/image/20190430/1556613833244033.jpg" alt="php中文网"></a>
+                    <div class="description">我一直在学习，我也一直在忘记。PHP应该是涉及知识最广的一门语言，上至C，C++下至pythson,java等。每天使用linux服务器的时候修改root及主机名这样简单的操作，我都要花费很多时间去百度，却</div>
+                </div>
+            </div>
+
+            <div class="article">
+                <h3><a href="javascript:;">php中文网-教程_手册_视频-免费php在线学习平台</a></h3>
+                <div class="general_image_pic">
+                    <a href="javascript:;"><img src="https://www.php54.com/ueditor/php/upload/image/20190430/1556613833244033.jpg" alt="php中文网"></a>
+                    <div class="description">我一直在学习，我也一直在忘记。PHP应该是涉及知识最广的一门语言，上至C，C++下至pythson,java等。每天使用linux服务器的时候修改root及主机名这样简单的操作，我都要花费很多时间去百度，却</div>
+                </div>
+            </div>
+            
         </div>
 
-        <div class="article">
-            <h3><a href="javascript:;">php中文网-教程_手册_视频-免费php在线学习平台</a></h3>
-            <div class="general_image_pic">
-                <a href="javascript:;"><img src="https://www.php54.com/ueditor/php/upload/image/20190430/1556613833244033.jpg" alt="php中文网"></a>
-                <div class="description">我一直在学习，我也一直在忘记。PHP应该是涉及知识最广的一门语言，上至C，C++下至pythson,java等。每天使用linux服务器的时候修改root及主机名这样简单的操作，我都要花费很多时间去百度，却</div>
-            </div>
+        <div class="right">
+            fsadfsd
         </div>
+
+        <p style="clear:both"></p>
     </div>
 
     <div class="php54-side-toolbar">
@@ -174,12 +208,12 @@
             <i class="iconfont icon-qrcode"></i>
             <div class="qr-box">
                 <div class="qr-item-box">
-                    <img src="https://www.php54.com/Public/Home/img/wx.jpg" alt="关注公众号">
+                    <img src="/static/img/wechat-public.jpg" alt="关注PHP54+公众号">
                     <p>关注公众号</p>
                 </div>
 
                 <div class="qr-item-box">
-                    <img src="https://www.php54.com/Public/Home/img/wx.jpg" alt="下载APP">
+                    <img src="/static/img/wechat-cheni.jpg" alt="添加作者微信">
                     <p>作者微信</p>
                 </div>
             </div>
@@ -191,37 +225,39 @@
     </div>
 
     <footer>
-        <div class="list">
-            <ul>
-                <li><a href="javascript:;">PHP54+首页</a></li>
-                <li><a href="javascript:;">所有文章</a></li>
-                <li><a href="javascript:;">关于作者/留言</a></li>
-                <li><a href="javascript:;">友情链接</a></li>
-            </ul>
+        <div class="footer-content">
+            <div class="list">
+                <ul>
+                    <li><a href="javascript:;">PHP54+首页</a></li>
+                    <li><a href="javascript:;">所有文章</a></li>
+                    <li><a href="javascript:;">关于作者/留言</a></li>
+                    <li><a href="javascript:;">友情链接</a></li>
+                </ul>
+            </div>
+            <div class="list">
+                    <ul>
+                        <li><a href="javascript:;">京ICP备18046247号-1</a></li>
+                        <li><a href="javascript:;">京公网安备 11010502037664号</a></li>
+                        <li><a href="javascript:;">PHP54技术博客</a></li>
+                        <li><a href="javascript:;">网站地图</a></li>
+                    </ul>
+                </div>
+            <div class="list">
+                <ul>
+                    <li><a href="javascript:;">陈佚-CHENI | PHP全栈工程师 * 3+ years</a></li>
+                    <li><a href="javascript:;">电话联系（仅限紧急情况）</a></li>
+                    <li class="green"><a href="javascript:;">15901432750</a></li>
+                    <li><a href="javascript:;">微信联系（常用）</a></li>
+                    <li class="green"><a href="javascript:;">K65480169</a></li>
+                    <li><a href="javascript:;">QQ（常年不在线）</a></li>
+                    <li class="green"><a href="javascript:;">654080169</a></li>
+                    <li><a href="javascript:;">邮箱方式（博客运营主要联系方式）</a></li>
+                    <li class="green"><a href="javascript:;">cheni@php54.com</a></li>
+                </ul>
+            </div>
+            <p style="clear:both"></p>
+            <span>© PHP54+ 2019</span>
         </div>
-        <div class="list">
-            <ul>
-                <li><a href="javascript:;">陈佚 | CHENI</a></li>
-                <li><a href="javascript:;">电话联系</a></li>
-                <li class="green"><a href="javascript:;">15901432750</a></li>
-                <li><a href="javascript:;">微信号联系</a></li>
-                <li class="green"><a href="javascript:;">K65480169</a></li>
-                <li><a href="javascript:;">QQ</a></li>
-                <li class="green"><a href="javascript:;">654080169</a></li>
-                <li><a href="javascript:;">邮箱方式</a></li>
-                <li class="green"><a href="javascript:;">cheni@php54.com</a></li>
-                <li><a href="javascript:;">网站地图</a></li>
-            </ul>
-        </div>
-        <div class="list">
-            <ul>
-                <li><a href="javascript:;">京ICP备18046247号-1</a></li>
-                <li><a href="javascript:;">京公网安备 11010502037664号</a></li>
-                <li><a href="javascript:;">PHP54技术博客</a></li>
-                <li><a href="javascript:;">网站地图</a></li>
-            </ul>
-        </div>
-        <p style="clear:both"></p>
     </footer>
 </body>
 
